2010-11-18 09:13  rsbivand

	* DESCRIPTION, R/xml1.R, man/execGRASS.Rd: adding ... to execGRASS

2010-08-29 19:51  rsbivand

	* DESCRIPTION, R/initGRASS.R, ChangeLog, inst/ChangeLog: add GRASS
	  LD/PATH first not last

2010-07-10 19:31  rsbivand

	* DESCRIPTION, ChangeLog, inst/ChangeLog: tidy

2010-06-12 06:45  rsbivand

	* DESCRIPTION, R/bin_link.R: NODATA problem in readRAST6

2010-04-29 09:07  rsbivand

	* DESCRIPTION, R/vect_link.R, man/readVECT6.Rd: integer overflow in
	  vect2neigh

2010-04-23 05:57  rsbivand

	* DESCRIPTION, R/xml1.R: extra quote protection in doGRASS

2010-03-28 17:37  rsbivand

	* R/bin_link.R, ChangeLog, inst/ChangeLog: detect DCELL in
	  readRAST6

2010-03-28 15:43  rsbivand

	* DESCRIPTION, R/bin_link.R, man/readRAST6.Rd, ChangeLog,
	  inst/ChangeLog: argument to control connection closing in
	  readRAST6

2010-01-29 13:57  rsbivand

	* DESCRIPTION, R/bin_link.R, ChangeLog, inst/ChangeLog: plugin n/s
	  bug fix

2010-01-15 16:51  rsbivand

	* DESCRIPTION, R/vect_link.R, ChangeLog, inst/ChangeLog: rgdal
	  version checking

2009-12-07 18:14  rsbivand

	* DESCRIPTION, R/initGRASS.R, man/initGRASS.Rd: trying QGIS

2009-11-08 08:58  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-11-08 08:04  rsbivand

	* DESCRIPTION, R/bin_link.R, R/vect_link.R, R/xml1.R,
	  man/readRAST6.Rd: protecting spaces in parameter values

2009-10-22 20:53  rsbivand

	* DESCRIPTION, R/vect_link.R, ChangeLog, inst/ChangeLog: fixing
	  locale problem

2009-09-23 11:27  rsbivand

	* DESCRIPTION, R/xml1.R, ChangeLog, inst/ChangeLog: no paramters in
	  interface description warning

2009-09-09 08:42  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-09-05 00:15  rsbivand

	* ChangeLog, inst/ChangeLog: fixing UTF-8

2009-09-04 23:53  rsbivand

	* DESCRIPTION, R/xml1.R, R/zzz.R, man/execGRASS.Rd,
	  man/initGRASS.Rd: fixing UTF-8

2009-09-02 15:42  rsbivand

	* DESCRIPTION, R/xml1.R: fix to get round parameters needing