@@ -1,10 +1,10 @@
 Package: spgrass6
-Version: 0.6-21
-Date: 2010-11-18
-Title: Interface between GRASS 6 geographical information system and R
+Version: 0.6-22
+Date: 2010-12-06
+Title: Interface between GRASS 6+ geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
-Description: Interpreted interface between GRASS 6 geographical 
+Description: Interpreted interface between GRASS 6+ geographical 
     information system and R, based on starting R from within the GRASS 
     environment, or running free-standing R in a temporary GRASS location;
     the package provides facilities for using all GRASS commands from the 
